--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             RPCPORT: 8545
             PORT: 30305
         container_name: ether.node1.com
-        command : geth --networkid 4649 --maxpeers 3 --datadir /home/DATA_STORE --rpc --rpcport 8545 --rpcaddr "0.0.0.0" --rpccorsdomain "*" --rpcapi "admin,db,eth,debug,miner,net,shh,txpool,personal,web3" --port 30305 console
+        command : /bin/bash
         working_dir: /home/DATA_STORE
 
     ether.node2.com:
